introduce email finder service, improve find emails

--- a/translations/de-DE/ModulesLegalcomplianceAdmin.de-DE.xlf
+++ b/translations/de-DE/ModulesLegalcomplianceAdmin.de-DE.xlf
@@ -390,7 +390,7 @@ Es liegt aber allein in der Verantwortung des Shopbetreibers, diese Seiten mit d
       </trans-unit>
       <trans-unit id="f68e93b7698c42081e06d5b2925bd543">
         <source>Check for new email templates</source>
-        <target>Test Email</target>
+        <target>Neue E-Mail Templates finden</target>
         <note>Line: </note>
       </trans-unit>
       <trans-unit id="e29252902fd4eaee6279ea5b60bc9092">
