--- a/changelog.txt
+++ b/changelog.txt
@@ -22,3 +22,4 @@ Version	Datum     	Bemerkung
 3.2.1	05.10.2023	Fix: escaping special chars in cms roles within mails
 3.2.2	23.07.2025	fix: Attempted to call an undefined method named "processAeucLabelRevoca…
 					fix: escape "&" in email template
+3.3.0	28.07.2025	feat: remove displayCMSDisputeInformation
